--- a/src/component/table/table.css
+++ b/src/component/table/table.css
@@ -1,134 +1,44 @@
-.mahjong-table {
-    position: relative;
-    width: 100vw;
+.table {
+    display: grid;
+    grid-template-areas:
+    'top top top'
+    'left center right'
+    'bottom bottom bottom';
+    grid-template-columns: 1fr auto 1fr;
+    grid-template-rows: auto 1fr auto;
     height: 100vh;
-    background-color: #004d40;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 100vw;
 }
 
-.player-area {
-    position: absolute;
+.seat {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    border: 1px solid black;
+    background-color: lightgray;
 }
 
 .top {
-    width: 50vw;
-    height: 25vh;
-    top: 10px;
-    left: 25%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.left {
-    width: 15vw;
-    height: 50vh;
-    top: 25%;
-    left : 20%;
-    flex-direction:row ;
-    justify-content: center;
-    align-items: center;
-}
-
-.right {
-    width: 25vw;
-    height: 50vh;
-    right: 10px;
-    top: 25%;
-    flex-direction: row-reverse;
-    justify-content: center;
-    align-items: center;
+    grid-area: top;
+    flex-direction: row;
 }
 
 .bottom {
-    width: 50vw;
-    bottom: 10px;
-    left: 25%;
-    flex-direction: column-reverse;
-    justify-content: center;
-    align-items: center;
+    grid-area: bottom;
+    flex-direction: row-reverse;
 }
 
-.center-area {
-    position: absolute;
-    width: 200px;
-    height: 200px;
-    background-color: #00796b;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.left {
+    grid-area: left;
     flex-direction: column;
 }
 
-.game-info {
-    font-size: 24px;
-    color: white;
-    margin-bottom: 10px;
+.right {
+    grid-area: right;
+    flex-direction: column-reverse;
 }
 
-.tile-row {
-    display: flex;
-}
-
-.tile-row.horizontal {
-    flex-direction: row;
-    margin-top: 10px;
-}
-
-.tile-row.verticalLeft {
-    flex-direction: row;
-    transform: rotate(90deg);
-    margin-right: 25px;
-}
-
-.tile-row.verticalRight {
-    flex-direction: row;
-    transform: rotate(-90deg);
-    margin-left: 25px;
-}
-
-
-.tile {
-    width: 40px;
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #ccc;
-    font-size: 18px;
-    border-radius: 5px;
-    cursor: pointer;
-    margin: 5px;
-    transition: background-color 0.3s;
-}
-
-.tile.hand {
-    background-color: mediumslateblue;
-}
-
-.tile.discarded {
-    background-color: #bdbdbd;
-    cursor: default;
-}
-
-.tile.pung {
-    background-color: #ffeb3b;
-    cursor: default;
-}
-
-.tile:hover {
-    background-color: #e0f7fa;
-}
-
-.tile:active {
-    background-color: #b2ebf2;
-}
-
-.play-button:hover {
-    background-color: #00695c;
-    border-color: #004d40;
+.center {
+    grid-area: center;
 }
